welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if (MAths.abs(100-n)<=10 || Maths.abs(200-n)<=10)
  	return true
  else
  	return false
}